[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delta-utils"
version = "0.0.4"
authors = [
  { name="neuromantic99", email="james@learney.me" },
]
description = "Utility tools for delta academy tournaments"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Delta-Academy/delta-utils/"
